--- a/1/实验报告一.md
+++ b/1/实验报告一.md
@@ -18,7 +18,7 @@
 
 输出信号为$3$位，即用$3$位二进制表示$0-7$这$8$个数，权重从高到低；输入信号为$8$位，优先级从高到低。
 
-当有多个输入时，对优先级最高的进行编码，其它低位对编码结果无影响。
+当有多个输入时，对优先级最高的进行编码，其它低位对编码结果无影响。使用`casez`语句实现这一功能，有效位为$1$，比它优先级高的设为$0$，比它优先级低的设为$?$。
 
 ### 主要代码
 
@@ -65,15 +65,13 @@ endmodule
 
 <img src="./img/8-3优先编码器测试.jpg" style="zoom:67%;" />
 
-
-
 ## 3-8译码器
 
 ### 设计思路
 
 输出为$8$位；输入为$3$位，用$3$位二进制表示$0-7$这8个数。
 
-输入的十进制数用对应的信号灯亮起表示，例如输入是$6$，第$2$个灯亮起，输入是$4$，第$4$个灯亮起。
+实现输入的十进制数用对应的信号为$1$即信号灯亮起表示，例如输入是$6$，第$2$个灯亮起，输入是$4$，第$4$个灯亮起。
 
 ### 主要代码
 
@@ -123,7 +121,7 @@ endmodule
 
 ### 设计思路
 
-输出为$3$位，第一位高电平表示第一个输入大，第三位高电平表示第二个输入较大，第二位高电平表示两个输入相等；输入为两个$4$位二进制。
+输出为$3$位，第一位高电平表示第一个输入较大，第三位高电平表示第二个输入较大，第二位高电平表示两个输入相等；输入为两个$4$位二进制数。
 
 ### 主要代码
 
@@ -330,4 +328,4 @@ endmodule
 
 ## 附件
 
-附加内容为4个实验的`.bit`文件和4个测试视频
+附加内容为$4$个实验的`.bit`文件和4个实验的测试视频。
