--- a/2/实验报告二.md
+++ b/2/实验报告二.md
@@ -15,7 +15,7 @@
 
 ### 设计思路
 
-顶层模块分别实例化求和、比较大小，输出最大值、最小值和七段译码器这$5$个子模块，其中七段译码器与实验一完全相同，其它子模块将在后面详细说明
+顶层模块分别实例化**求和、比较大小，输出最大值、最小值和七段译码器**这$5$个子模块，其中七段译码器与实验一完全相同，其它子模块将在后面详细说明
 
 ### 主要代码
 
@@ -394,4 +394,4 @@ endmodule
 
 ## 附件
 
-附件内容为实验二的`.bit`文件和测试视频。
+附件内容为实验二的`.bit`文件和实验结果测试视频。
