--- a/3/实验报告三.md
+++ b/3/实验报告三.md
@@ -1,7 +1,5 @@
 # 实验三报告
 
-[TOC]
-
 ## 实验内容
 
 数码管扫描电路
@@ -204,12 +202,12 @@ endmodule
 
 - 每个数码管点亮时间保持$2^{16}$
 
-由于视觉暂留，在这个刷新频率下，肉眼分辨不出它在刷新，所以看到的结果为$4$个管同时显示。
+由于视觉暂留，在这个刷新频率下，肉眼分辨不出它在刷新，点亮某一位后，在肉眼反应之前，下一位点亮，所以看到的结果是$4$个管同时显示。
 
 <img src="./img/216.jpg" style="zoom:67%;" />
 
 - 每个数码管电亮时间为$2^{6}$
 
-由于刷新频率过快，看到的结果为乱码。
+由于肉眼的视觉暂留，数码管刷新频率过快时，我们看到的结果出现重影。
 
 <img src="./img/26.jpg" style="zoom:67%;" />
